<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--shows menu items with icons-->
   <!-- <item
        android:id="@+id/item_container"
        android:icon="@drawable/ic_more"
        android:title=""
        app:showAsAction="always">

        <menu>
            <item
                android:contentDescription="@string/delete_all_items"
                android:id="@+id/delete"
                android:icon="@drawable/ic_delete"
                android:title="@string/delete_all"
                />

            <item
                android:contentDescription="@string/sync_all_items"
                android:id="@+id/sync"
                android:icon="@drawable/ic_sync"
                android:title="@string/sync_items"
                />
        </menu>
    </item>-->


    <item
        android:contentDescription="@string/delete_all_items"
        app:showAsAction="ifRoom"
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_all"
        />

    <item
        android:contentDescription="@string/sync_all_items"
        app:showAsAction="ifRoom"
        android:id="@+id/sync"
        android:icon="@drawable/ic_sync"
        android:title="@string/sync_all_items"
        />


</menu>