<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/custom_dialog_view"
        android:layout_width="match_parent"
        android:layout_height="214dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/premium_request_dialog_title"
            android:textColor="#000000"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/raleway_medium"
            android:lineSpacingExtra="8dp"
            android:text="@string/premium_request_dialog_message"
            android:textAlignment="textStart"
            android:textColor="#837D7D"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/raleway_medium"
                android:lineSpacingExtra="16dp"
                android:text="@string/got_it"
                android:textAlignment="center"
                android:textColor="#D61111"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</layout>
